--- a/site/index.html
+++ b/site/index.html
@@ -6,6 +6,6 @@
 	<title>hello Coursera</title>
 </head>
 <body>
-<h1>hello Coursera!<h1>
+<h1>hello Coursera! Elephant in the room<h1>
 </body>
 </html>
