--- a/homework1/site/index.html
+++ b/homework1/site/index.html
@@ -3,9 +3,24 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title> Go go go</title>
+	<title> Homework 1</title>
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-This is a start
+	<h1>Our Menu </h1>
+
+	<section> 
+		<div id= chicken> Chicken </div> 
+		<p> Our chicken is of premium quality though full of watter and addatives.
+		Order chicken meals and you will get mostly chicken with posible traces of other meets as well. Our meals are thermally processed but good overall health is advisable in order to fight possible side effects. </p>
+	</section>
+	<section>
+		<div id = beef> Beef </div>
+		<p> Our beef is of premium quality though full of watter and addatives. Order beef meals and you will get mostly chicken with posible traces of other meets as well. Our meals are thermally processed but good overall health is advisable in order to fight possible side effects. </p>
+	</section>
+	<section> 
+		<div id = pork> Pork </div>
+		<p> Our pork is of premium quality though full of watter and addatives. Order pork meals and you will get mostly chicken with posible traces of other meets as well. Our meals are thermally processed but good overall health is advisable in order to fight possible side effects. </p>
+	</section>
 </body>
 </html>
